--- a/app/src/main/res/layout/app_slide_frag.xml
+++ b/app/src/main/res/layout/app_slide_frag.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingTop="10dp"
-    android:paddingBottom="10dp" >
+    android:paddingBottom="10dp">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/app_slide_recycler_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-         />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </LinearLayout>
